--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "description": "A camera watching some falcons in Syracuse",
   "version": "0.0.1",
   "main": "./src/paparazzo",
+  "scripts": {
+    "start": "node falconcam/server.js"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/ctaloi/Syracuse-Falcon-Camera"
@@ -15,6 +18,6 @@
     "socket.io": "^1.3.5"
   },
   "engines": {
-  "node": "v0.6.5"
+    "node": "0.10.x"
   }
 }
